<resources>
    <string name="app_name">Phish SMS</string>
    <string name="sign_up_heading">Welcome to SMSPhishing</string>
    <string name="sign_in_heading">Welcome back!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_bottom_text">Don\'t have an account?</string>
    <string name="sign_up_bottom_text">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fetch_heading">Click here to view SMS Messages</string>
    <string name="btn_fetch_screen">Fetch SMS</string>
    <string name="default_web_client_id">723675699786-quhgceidptolplmo0hh1pm96eptbufnk.apps.googleusercontent.com</string>
    <string name="spinner_title">SMS of your device</string>
</resources>